		gtkwave).
		Added support for attribute begin/end in FST.  (Currently
		unused by gtkwave.)  This allows embedding of various data
		inside the structure tree.
		Added autoraise on entry window on keystrokes or periodically
		when it exists.
		Added ability to store $comment in FST files via the attribute
		mechanism (FST_AT_MISC/FST_MT_COMMENT).
3.3.49	11sep13	Fix crashed caused by X11 protocol limitation for pixmap size.
		Potential buffer overflow fix in vcd2fst.
		Added ability to store environment variable information in
		FST files (FST_MT_ENVVAR).
		Fixed bad enum for FST_PT_MAX.
		Added contrib/fst_jni directory to distribution.
		Fixed broken "make dist" variants.
		Added buffer and linkage data directions (future expansion
		for VHDL) in FST and gtkwave.
		Removed requirement for fsdbdebug in path when FsdbReader
		is present.
		Fixed ordering of static FSDB libraries for when dynamic ones
		are not present.
		Added direction filters to SST name filter search.  That is,
		adding +I+, +O+, +IO+, +B+, or +L+ before the regular 
		expression adds additional filtering criteria.  Direction
		filters are case-insensitive.
		Relax FSDB loader to allow VHDL and mixed-language files.
		Added VHDL hierarchy types to FST, internal VCD loaders and 
		also vcdfst/fst2vcd.
		Added in VHDL to FST (which will also allow other languages):
		gtkwave can process these types (e.g., signal + std_ulogic), 
		but there are currently no simulators supporting them.  These
		are written by using fstWriterCreateVar2().
3.3.50	06oct13	Limit number of rows that can be displayed in mouseover in
		order to prevent potential X11 crashes on extremely wide
		signals.
		Added "/File/Grab To File" PNG image grab menu option.
		Added missing $dumpvars emission in fst2vcd.
		Added missing atto and zepto time prefix parsing in vcd2fst.
		Added VHDL package type to FST.
		Added red box around 'U' vector values for VHDL similar to 
		'X' for Verilog.